--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,11 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
+
+# https://fabricmc.net/develop/
 minecraft_version=1.19.3
 yarn_mappings=1.19.3+build.5
 loader_version=0.14.12
-# Mod Properties
+fabric_api_version=0.72.0+1.19.3
 mod_version=1.0.1
 maven_group=me.iru.copyworld
 archives_base_name=copyworld
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
-fabric_version=0.72.0+1.19.3
