--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+//file:noinspection GroovyAssignabilityCheck
+
 pluginManagement {
     repositories {
         maven { url "https://maven.fabricmc.net/" }
