--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,4 +1,5 @@
 //file:noinspection GroovyAssignabilityCheck
+//file:noinspection DependencyNotationArgument
 
 plugins {
     id 'com.github.johnrengelman.shadow'
